--- a/source/_posts/开题/前期调研.md
+++ b/source/_posts/开题/前期调研.md
@@ -1,11 +1,11 @@
 ---
 title: 前期调研
 date: 2025-06-29 13:00:30
-categories:
-  - AI
-  - data storage
+categories: 
+- [AI]
+- [data storage]
 tags:
-  - 未分类
+  - 开题相关
 ---
 
 
@@ -35,7 +35,7 @@ tags:
 
 主要需要和传统块存储进行对比，大概率大模型 prefill 和 inference 阶段有其独特的访问模式！
 
-  
+
 主要方向：KV Cache 缓存管理加速推理速度方向，不限定为一定要预取！
 
 后面阅读文章的时候需要重点关注：文章的问题总结出来，文章主要解决哪些问题，还有哪些没有解决的问题，从问题中发现创新点。
