--- a/source/_posts/开题/前期调研.md
+++ b/source/_posts/开题/前期调研.md
@@ -56,6 +56,16 @@ tags:
 
 训练一个轻量级的机器学习模型（如小型神经网络或决策树），以第 $i-1$ 层的注意力输入和模型参数为输入，预测第 $i$ 层中哪些 token 的 KV cache 条目最重要。
 
+### 可能 idea
+
+**动态数据放置**：RL 代理可学习在 GPU 显存、DRAM 和 SSD 之间动态分配 KV Cache，优化延迟和吞吐量。例如，基于当前批次大小和序列长度，决定哪些 token 的 KV Cache 保留在显存中。
+
+**Token 选择**：RL 可用于选择对推理最重要的 token（如高注意力分数的 token），剔除冗余 token，类似 Finch 或 H2O 的思路，但通过 RL 动态学习而非静态规则。
+
+**层间优化**：RL 可决定哪些层的 KV Cache 优先存储在高带宽存储中，基于 MiniCache 观察到的层间相似性。
+
+**奖励函数设计**：奖励函数可结合推理延迟、吞吐量、内存占用和生成质量。例如，奖励低延迟和高命中率，惩罚高内存占用或生成错误。
+
 ## 相关概念整理
 
 KVCache 是什么？
